# qt-commander

./: CMakeLists.txt  CONTRIBUTING.md  Projektbeschreibung_Dirk.txt  audioplayerwindow.cpp  audioplayerwindow.h  audioplayerwindow.ui  changelog.md  checksumdialog.cpp  checksumdialog.h  checksumdialog.ui  createdirectorydialog.cpp  createdirectorydialog.h  createdirectorydialog.ui  directorycomparewindow.cpp  directorycomparewindow.h  directorycomparewindow.ui  dirutils.cpp  dirutils.h  fileinfowindow.cpp  fileinfowindow.h  fileinfowindow.ui  filetypedetection.cpp  filetypedetection.h  focustrackingtreewidget.cpp  focustrackingtreewidget.h  imageviewwindow.cpp  imageviewwindow.h  imageviewwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mountedvolumesdialog.cpp  mountedvolumesdialog.h  mountedvolumesdialog.ui  movieviewwindow.cpp  movieviewwindow.h  movieviewwindow.ui  readme.md  settings.cpp  (+7 more)
.github/workflows/: msys2.yml  package_debian.yml  ubuntu.yml
ci/: 02-create-package.sh  copy-dll-dependencies.sh
data/: qt-commander.desktop
debian/: changelog  control  copyright  qt-commander.install  rules  watch
debian/upstream/: metadata
setup/: setup.iss
util/: GitInfos.hpp  GitInfos.template.cpp  compare.cpp  compare.h  comparecasesensitivity.h  dirutils.cpp  dirutils.h  durationutils.cpp  durationutils.h  filetypedetection.cpp  filetypedetection.h  settings.cpp  settings.h
viewers/: animationviewwindow.cpp  animationviewwindow.h  animationviewwindow.ui  audioplayerwindow.cpp  audioplayerwindow.h  audioplayerwindow.ui  imageviewwindow.cpp  imageviewwindow.h  imageviewwindow.ui  movieviewwindow.cpp  movieviewwindow.h  movieviewwindow.ui  pdfviewwindow.cpp  pdfviewwindow.h  pdfviewwindow.ui  textviewwindow.cpp  textviewwindow.h  textviewwindow.ui  videoplayerwindow.cpp  videoplayerwindow.h  videoplayerwindow.ui
viewers/hl/: cpphighlighter.cpp  cpphighlighter.h  csharphighlighter.cpp  csharphighlighter.h  defaultthemelight.h  javahighlighter.cpp  javahighlighter.h  luahighlighter.cpp  luahighlighter.h  pascalhighlighter.cpp  pascalhighlighter.h  pythonhighlighter.cpp  pythonhighlighter.h  rusthighlighter.cpp  rusthighlighter.h  shellhighlighter.cpp  shellhighlighter.h  sqlhighlighter.cpp  sqlhighlighter.h  theme.h
viewers/hl/themes/: defaultthemedark.cpp  defaultthemedark.h  defaultthemelight.cpp  defaultthemelight.h  theme.h  themeid.h
